Implementation of the offers viewing.

--- a/app/src/main/res/layout/form_activity.xml
+++ b/app/src/main/res/layout/form_activity.xml
@@ -44,6 +44,11 @@
 				android:inputType="text" />
 
 		<Button
+				android:id="@+id/insertSampleData"
+				style="@style/FormButton"
+				android:text="@string/insertSampleData" />
+
+		<Button
 				android:id="@+id/viewOffers"
 				style="@style/FormButton"
 				android:text="@string/viewOffers" />
