--- a/app/src/main/res/layout/offers_activity.xml
+++ b/app/src/main/res/layout/offers_activity.xml
@@ -6,7 +6,15 @@
 
 	<android.support.v7.widget.RecyclerView
 			android:id="@+id/offersRecyclerView"
-			android:scrollbars="vertical"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"/>
+			android:layout_height="match_parent"
+			android:scrollbars="vertical"
+			android:visibility="gone" />
+
+	<TextView
+			android:id="@+id/noOffersTextView"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:gravity="center"
+			android:text="@string/noOffers" />
 </LinearLayout>
