--- a/app/src/main/res/layout/offers_list_element.xml
+++ b/app/src/main/res/layout/offers_list_element.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+								android:layout_width="match_parent"
+								android:layout_height="match_parent">
 
 	<ImageView
 			android:id="@+id/thumbnail"
@@ -9,43 +9,36 @@
 			android:layout_height="60dp"
 			android:layout_alignParentTop="true"
 			android:layout_margin="7dp"
-			android:contentDescription="@string/offerImage" />
+			android:contentDescription="@string/offerImage"/>
 
 	<TextView
 			android:id="@+id/title"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
+			style="@style/OffersTextView"
 			android:layout_alignParentTop="true"
-			android:layout_marginEnd="5dp"
-			android:layout_marginRight="5dp"
+			android:layout_marginTop="3dp"
 			android:layout_toEndOf="@id/thumbnail"
 			android:layout_toRightOf="@id/thumbnail"
 			android:textSize="15sp"
-			android:textStyle="bold" />
+			android:textStyle="bold"/>
 
 	<TextView
 			android:id="@+id/teaser"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
+			style="@style/OffersTextView"
 			android:layout_below="@+id/title"
-			android:layout_marginEnd="5dp"
-			android:layout_marginRight="5dp"
 			android:layout_toEndOf="@id/thumbnail"
-			android:layout_toRightOf="@id/thumbnail" />
+			android:layout_toRightOf="@id/thumbnail"/>
 
 	<TextView
 			android:id="@+id/payout"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
+			style="@style/OffersTextView"
 			android:layout_below="@+id/teaser"
-			android:layout_marginEnd="5dp"
-			android:layout_marginRight="5dp"
+			android:layout_marginBottom="5dp"
 			android:layout_toEndOf="@id/thumbnail"
-			android:layout_toRightOf="@id/thumbnail" />
+			android:layout_toRightOf="@id/thumbnail"/>
 
 	<View
 			android:layout_width="match_parent"
 			android:layout_height="1dp"
-			android:background="@color/separatorColor" />
+			android:background="@color/separatorColor"/>
 
 </RelativeLayout>
